--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <ul id="menu">
+        <li>Logo</li>
+        <li>Home</li>
+        <li>Projects</li>
+        <li>Collage</li>
+    </ul>
     <h1>Hai,</h1>
 </body>
 </html>
