--- a/index.html
+++ b/index.html
@@ -1,19 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Still in developement</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Still in developementy</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="bs/css/bootstrap.min.css" rel="stylesheet">
+    <script src="bs/js/bootstrap.bundle.min.js"></script>
+    <style>
+        div#header {
+            padding: 300px 0px 400px 0px;
+        }
+        div#sep1 {
+            width: 100%;
+            height: 200px;
+            transform: skewY(-7deg);
+            margin-top: -100px;
+        }
+        div#konten1 {
+            padding: 150px 100px 350px 100px;
+            margin-top: -100px;
+        }
+        div#sep2 {
+            width: 100%;
+            height: 200px;
+            transform: skewY(7deg);
+            margin-top: -100px;
+        }
+        div#konten2 {
+            padding: 150px 100px 350px 100px;
+            margin-top: -100px;
+        }
+    </style>
 </head>
 <body>
-    <ul id="menu">
-        <li>Logo</li>
-        <li>Home</li>
-        <li>Projects</li>
-        <li>Collage</li>
-    </ul>
-    <h1>Hai,</h1>
+    <nav class="navbar navbar-expand-sm bg-light navbar-light">
+        <div class="container">
+            <ul class="navbar-nav mx-auto">
+                <li id="logo" class="navbar-item">
+                    <a class="nav-link" href="#">Logo</a>
+                </li>
+                <li class="navbar-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="navbar-item">
+                    <a class="nav-link" href="#">Projects</a>
+                </li>
+                <li class="navbar-item">
+                    <a class="nav-link" href="#">Collage</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div id="header" class="bg-primary text-white text-center">
+        <h1>Hai,</h1>
+    </div>
+    <div id="sep1" class="bg-dark"></div>
+    <div id="konten1" class="bg-dark text-white">
+        <h1 class="float-end">Konten 1</h1>
+    </div>
+    <div id="sep2" class="bg-primary"></div>
+    <div id="konten2" class="bg-primary text-white">
+        <h1 class="float-start">Konten 2</h1>
+    </div>
+    <div id="sep1" class="bg-dark"></div>
+    <div id="konten1" class="bg-dark text-white">
+        <h1 class="float-end">Konten 3</h1>
+    </div>
+    <div id="sep2" class="bg-primary"></div>
+    <div id="konten2" class="bg-primary text-white">
+        <h1 class="float-start">Konten 4</h1>
+    </div>
+    <div id="sep1" class="bg-dark"></div>
+    <div id="konten1" class="bg-dark text-white">
+        <h1 class="float-end">Footer</h1>
+    </div>
 </body>
 </html>
