--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="bs/css/bootstrap.min.css" rel="stylesheet">
     <script src="bs/js/bootstrap.bundle.min.js"></script>
     <style>
+        ul.navbar-nav li {
+            display: block;
+        }
         div#header {
             padding: 300px 0px 400px 0px;
         }
