--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="bs/js/bootstrap.bundle.min.js"></script>
     <style>
         ul.navbar-nav li {
-            display: block;
+            display: inline-block;
         }
         div#header {
             padding: 300px 0px 400px 0px;
