--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="bs/css/bootstrap.min.css" rel="stylesheet">
     <script src="bs/js/bootstrap.bundle.min.js"></script>
     <style>
-        ul.navbar-nav li {
+        ul.navbar-nav {
             display: inline-block;
         }
         div#header {
