--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
         div#header {
             padding: 300px 0px 400px 0px;
+            backround-image : url('https://ftk.unisnu.ac.id/assets/media/1280x800-slideshow.jpg');
         }
         div#sep1 {
             width: 100%;
