--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         div#header {
             padding: 300px 0px 400px 0px;
-            backround-image : url('https://ftk.unisnu.ac.id/assets/media/1280x800-slideshow.jpg');
+            background-image: url("https://ftk.unisnu.ac.id/assets/media/1280x800-slideshow.jpg");
         }
         div#sep1 {
             width: 100%;
