--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </ul>
         </div>
     </nav>
-    <div id="header" class="bg-primary text-white text-center">
+    <div id="header" class="text-white text-center">
         <h1>Hai,</h1>
     </div>
     <div id="sep1" class="bg-dark"></div>
