--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             height: 200px;
             transform: skewY(-7deg);
             margin-top: -100px;
+            background: transparent;
         }
         div#konten1 {
             padding: 150px 100px 350px 100px;
@@ -56,7 +57,7 @@
     <div id="header" class="text-white text-center">
         <h1>Hai,</h1>
     </div>
-    <div id="sep1" class="bg-dark"></div>
+    <div id="sep1" class=""></div>
     <div id="konten1" class="text-white">
         <h1 class="float-end">Konten 1</h1>
     </div>
