--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
         }
         div#footer-isi {
             text-align: center;
-            padding-bottom: 100px;
+            padding: 100px 10px;
             transform: skewY(0deg);
         }
         div#footer-isi span {
             display: inline-block;
-            width: 33%;
-            padding: 20px;
+            width: 30%;
+            padding: 3%;
             vertical-align: top;
         }
     </style>
@@ -137,8 +137,9 @@
     <div id="footer" class="sep-r">
         <div id="footer-isi" class="text-white konten1">
             <span>
-                <p>About Me</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at facilisis massa. Suspendisse et lobortis nisi.</p>
+                <p>Contact</p>
+                Github<br>
+                Whatsapp
             </span>
 
             <span>
@@ -147,9 +148,8 @@
             </span>
 
             <span>
-                <p>Contact</p>
-                Github<br>
-                Whatsapp
+                <p>About Me</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at facilisis massa. Suspendisse et lobortis nisi.</p>
             </span>
         </div>
     </div>
