--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
             box-shadow: 0px 0px 100px rgba(0,0,0,0.5);
         }
         div#header {
-            //padding: 300px 0px 400px 0px;
             height: 800px;
-            //background-image: url("https://i.pinimg.com/originals/b2/e0/3e/b2e03e316101ec495207bf8c594085f7.jpg");
+            /*background-image: url("https://i.pinimg.com/originals/b2/e0/3e/b2e03e316101ec495207bf8c594085f7.jpg");*/
             background-attachment: fixed;
             background-size: cover;
         }
@@ -42,7 +41,6 @@
         }
         div.konten1 {
             padding: 100px 50px 200px 50px;
-            //margin-top: -100px;
             transform: skewY(7deg);
             text-align: right;
         }
@@ -58,7 +56,6 @@
         }
         div.konten2 {
             padding: 100px 50px 200px 50px;
-            //margin-top: -100px;
             transform: skewY(-7deg);
         }
         div#footer-isi {
