--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         }
         div#header {
             height: 800px;
-            /*background-image: url("https://i.pinimg.com/originals/b2/e0/3e/b2e03e316101ec495207bf8c594085f7.jpg");*/
+            background-image: url("https://unsplash.com/photos/GrcMd1FvucY/download?force=true&w=640");
             background-attachment: fixed;
             background-size: cover;
+            background-position: center bottom;
         }
         div#header-w {
             background-color: rgba(0, 0, 0, 0.2);
